# Camera-Controls

./: .env.example  .prettierignore  README.md  VIDEO_UPLOAD.md  eslint.config.js  package-lock.json  package.json  php-upload-check.md
.github/instructions/: project-quality-checks.instructions.md  readability-and-file-organization.instructions.md
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/libs/: README.md
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/camera/: mod.rs
src-tauri/src/edsdk/: ffi.rs  mod.rs  properties.rs
src/components/: CameraConnect.vue  CameraControls.vue  Gallery.vue  GalleryScreen.vue  LiveView.vue  OBSConnect.vue  PrinterSettings.vue  RecordingSettings.vue  SettingsModal.vue  ShutterButton.vue  ThumbnailGallery.vue
src/config/: remoteSite.js
src/lib/: pusherClient.js  resumableUploadExample.js  videoChunkUpload.js
